# finnctl

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml
src/finnctl/: __init__.py  auth.py  client.py  main.py
src/finnctl/commands/: ads.py  auth.py  torget.py
src/finnctl/marketplaces/: ad_cache.py  ad_get.py  ad_put.py  my_items.py  torget.py
