[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finnctl"
version = "0.1.0"
description = "CLI tool for finn.no classifieds"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
finnctl = "finnctl.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finnctl"]
