[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finnctl"
version = "0.1.0"
description = "finn.no client library and CLI tool"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.0",
    "browser-cookie3>=0.19",
]

[project.scripts]
finnctl = "finnctl.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finnctl"]
